--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -1541,6 +1541,7 @@ components:
         - support
         - generic
         - complaint
+        - anti_fraud
     TextGenerationRequest:
       title: TextGenerationRequest
       type: object
