--- a/media/media/api-reference/api.yml
+++ b/media/media/api-reference/api.yml
@@ -403,6 +403,7 @@ components:
             - CATEGORY
             - LABEL
             - PRODUCT
+            - MODULE
         id:
           type: string
           description: Reference Id.
